fix: Properly align the grid
I have no idea how I didn't notice this for so long.

--- a/src/Grid/Grid.module.css
+++ b/src/Grid/Grid.module.css
@@ -6,6 +6,8 @@
     grid-area: stack;
     display: grid;
     gap: 4px;
+    justify-items: center;
+    align-items: center;
 
     button {
       aspect-ratio: 1 / 1;
